# MIMUW

./: .gitignore  README.md
I year/computer-architecture-and-operating-systems/project1/: makefile  seq.c
I year/computer-architecture-and-operating-systems/project2/: scopy.asm
I year/intro-to-programming/: GameOfLife.c  SameGame.c
II year/OOP/project/: Main.java  TestyLinux.java  TestyWindows.java
II year/computer-networks/project1/: Makefile
II year/computer-networks/project2/: Makefile
II year/concurrent-programming/MIMPI/: mimpi.c  mimpi_common.c  mimpi_common.h  mimpirun.c
II year/concurrent-programming/non-blocking-queues/: BLQueue.c  HazardPointer.c  HazardPointer.h  LLQueue.c  RingsQueue.c  SimpleQueue.c
II year/cpp-course/: README.md
II year/cpp-course/project1/: description.txt  parking.cc
II year/cpp-course/project2/: description.txt  poset.cc  poset.h
II year/cpp-course/project3/: crosswords.h
II year/cpp-course/project4/: stack.h
II year/cpp-course/project5/: college.h
III year/deep-neural-networks/: project1.ipynb  project2.ipynb  project3.ipynb
III year/functional-programming/: project1.hs
III year/functional-programming/project2/: ff417568-zadanie2.cabal
III year/functional-programming/project2/src/: DefMap.hs  Main.hs  Parser.hs  Reduction.hs  Types.hs
III year/functional-programming/project3/: ff417568-zadanie3.cabal
III year/functional-programming/project3/src/: Focus.hs  Main.hs  Parser.hs  ReductionZipper.hs  SnocList.hs  Types.hs
III year/ocaml/Main/: dune  main.ml
III year/visual-recognition/: project2.ipynb
(+105 files in other folders)
